// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Snapshots can click on items 1`] = `
<div
  className="objectlist-table--scroll"
>
  <Overlay
    status="done"
  />
  <table
    className="objectlist-table"
  >
    <thead
      className=""
    >
      <tr>
        <th
          className="objectlist-table__th objectlist-table__th--border-bottom objectlist-table__th--selector"
          rowSpan={1}
        >
          <AllSelector
            deselectAll={[Function]}
            numSelected={undefined}
            selectAll={[Function]}
            total={5}
          />
        </th>
        <TableHeader
          headerItems={
            Object {
              "_colSpan": 1,
              "_rowSpan": 1,
              "dataKey": "name",
              "fieldKey": "name",
              "header": "Name",
              "item": [Function],
              "label": "name",
              "optional": false,
              "sortKey": "🎂",
            }
          }
          label="name"
          rowSpan={1}
          saveWidth={[MockFunction]}
          showSortIcon={false}
          sortKeys={Array []}
          updateSorting={undefined}
          width={undefined}
        />
        <TableHeader
          headerItems={
            Array [
              Object {
                "dataKey": "age",
                "fieldKey": "age_gender",
                "header": "Age",
                "item": [Function],
                "label": "age_gender",
                "optional": false,
                "sortKey": "🥧",
              },
              Object {
                "dataKey": "gender",
                "fieldKey": "gender_age",
                "header": "Gender",
                "item": [Function],
                "label": "gender_age",
                "optional": false,
                "sortKey": "🍩",
              },
            ]
          }
          label="age_gender"
          rowSpan={1}
          saveWidth={[MockFunction]}
          showSortIcon={false}
          sortKeys={Array []}
          updateSorting={undefined}
          width={50}
        />
      </tr>
    </thead>
    <tbody>
      <tr
        className="objectlist-table__row objectlist-table__row--clickable"
        onClick={[Function]}
      >
        <td
          className="objectlist-table__td"
        >
          <Selector
            id={1}
            selected={false}
            toggleSelect={[MockFunction]}
          />
        </td>
        <td
          className="objectlist-table__td"
        >
          Sam
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            25
          </span>
          M
        </td>
      </tr>
      <tr
        className="objectlist-table__row objectlist-table__row--clickable"
        onClick={[Function]}
      >
        <td
          className="objectlist-table__td"
        >
          <Selector
            id={2}
            selected={false}
            toggleSelect={[MockFunction]}
          />
        </td>
        <td
          className="objectlist-table__td"
        >
          Mary
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            12
          </span>
          F
        </td>
      </tr>
      <tr
        className="objectlist-table__row objectlist-table__row--clickable"
        onClick={[Function]}
      >
        <td
          className="objectlist-table__td"
        >
          <Selector
            id={3}
            selected={false}
            toggleSelect={[MockFunction]}
          />
        </td>
        <td
          className="objectlist-table__td"
        >
          Q
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            3
          </span>
          ?
        </td>
      </tr>
      <tr
        className="objectlist-table__row objectlist-table__row--clickable"
        onClick={[Function]}
      >
        <td
          className="objectlist-table__td"
        >
          <Selector
            id={4}
            selected={false}
            toggleSelect={[MockFunction]}
          />
        </td>
        <td
          className="objectlist-table__td"
        >
          Peter
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            111
          </span>
          FM
        </td>
      </tr>
      <tr
        className="objectlist-table__row objectlist-table__row--clickable"
        onClick={[Function]}
      >
        <td
          className="objectlist-table__td"
        >
          <Selector
            id={5}
            selected={false}
            toggleSelect={[MockFunction]}
          />
        </td>
        <td
          className="objectlist-table__td"
        >
          Amy
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            32
          </span>
          Confused
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table Snapshots can select items 1`] = `
<div
  className="objectlist-table--scroll"
>
  <Overlay
    status="done"
  />
  <table
    className="objectlist-table"
  >
    <thead
      className=""
    >
      <tr>
        <th
          className="objectlist-table__th objectlist-table__th--border-bottom objectlist-table__th--selector"
          rowSpan={1}
        >
          <AllSelector
            deselectAll={[Function]}
            numSelected={undefined}
            selectAll={[Function]}
            total={5}
          />
        </th>
        <TableHeader
          headerItems={
            Object {
              "_colSpan": 1,
              "_rowSpan": 1,
              "dataKey": "name",
              "fieldKey": "name",
              "header": "Name",
              "item": [Function],
              "label": "name",
              "optional": false,
              "sortKey": "🎂",
            }
          }
          label="name"
          rowSpan={1}
          saveWidth={[MockFunction]}
          showSortIcon={false}
          sortKeys={Array []}
          updateSorting={undefined}
          width={undefined}
        />
        <TableHeader
          headerItems={
            Array [
              Object {
                "dataKey": "age",
                "fieldKey": "age_gender",
                "header": "Age",
                "item": [Function],
                "label": "age_gender",
                "optional": false,
                "sortKey": "🥧",
              },
              Object {
                "dataKey": "gender",
                "fieldKey": "gender_age",
                "header": "Gender",
                "item": [Function],
                "label": "gender_age",
                "optional": false,
                "sortKey": "🍩",
              },
            ]
          }
          label="age_gender"
          rowSpan={1}
          saveWidth={[MockFunction]}
          showSortIcon={false}
          sortKeys={Array []}
          updateSorting={undefined}
          width={50}
        />
      </tr>
    </thead>
    <tbody>
      <tr
        className="objectlist-table__row objectlist-table__row--clickable"
        onClick={[Function]}
      >
        <td
          className="objectlist-table__td"
        >
          <Selector
            id={1}
            selected={false}
            toggleSelect={[MockFunction]}
          />
        </td>
        <td
          className="objectlist-table__td"
        >
          Sam
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            25
          </span>
          M
        </td>
      </tr>
      <tr
        className="objectlist-table__row objectlist-table__row--clickable"
        onClick={[Function]}
      >
        <td
          className="objectlist-table__td"
        >
          <Selector
            id={2}
            selected={false}
            toggleSelect={[MockFunction]}
          />
        </td>
        <td
          className="objectlist-table__td"
        >
          Mary
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            12
          </span>
          F
        </td>
      </tr>
      <tr
        className="objectlist-table__row objectlist-table__row--clickable"
        onClick={[Function]}
      >
        <td
          className="objectlist-table__td"
        >
          <Selector
            id={3}
            selected={false}
            toggleSelect={[MockFunction]}
          />
        </td>
        <td
          className="objectlist-table__td"
        >
          Q
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            3
          </span>
          ?
        </td>
      </tr>
      <tr
        className="objectlist-table__row objectlist-table__row--clickable"
        onClick={[Function]}
      >
        <td
          className="objectlist-table__td"
        >
          <Selector
            id={4}
            selected={false}
            toggleSelect={[MockFunction]}
          />
        </td>
        <td
          className="objectlist-table__td"
        >
          Peter
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            111
          </span>
          FM
        </td>
      </tr>
      <tr
        className="objectlist-table__row objectlist-table__row--clickable"
        onClick={[Function]}
      >
        <td
          className="objectlist-table__td"
        >
          <Selector
            id={5}
            selected={false}
            toggleSelect={[MockFunction]}
          />
        </td>
        <td
          className="objectlist-table__td"
        >
          Amy
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            32
          </span>
          Confused
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table Snapshots renders default 1`] = `
<div
  className="objectlist-table--scroll"
>
  <Overlay
    status="done"
  />
  <table
    className="objectlist-table"
  >
    <thead
      className=""
    >
      <tr>
        <TableHeader
          headerItems={
            Object {
              "_colSpan": 1,
              "_rowSpan": 1,
              "dataKey": "name",
              "fieldKey": "name",
              "header": "Name",
              "item": [Function],
              "label": "name",
              "optional": false,
              "sortKey": "🎂",
            }
          }
          label="name"
          rowSpan={1}
          saveWidth={[MockFunction]}
          showSortIcon={false}
          sortKeys={Array []}
          updateSorting={undefined}
          width={undefined}
        />
        <TableHeader
          headerItems={
            Array [
              Object {
                "dataKey": "age",
                "fieldKey": "age_gender",
                "header": "Age",
                "item": [Function],
                "label": "age_gender",
                "optional": false,
                "sortKey": "🥧",
              },
              Object {
                "dataKey": "gender",
                "fieldKey": "gender_age",
                "header": "Gender",
                "item": [Function],
                "label": "gender_age",
                "optional": false,
                "sortKey": "🍩",
              },
            ]
          }
          label="age_gender"
          rowSpan={1}
          saveWidth={[MockFunction]}
          showSortIcon={false}
          sortKeys={Array []}
          updateSorting={undefined}
          width={50}
        />
      </tr>
    </thead>
    <tbody>
      <tr
        className="objectlist-table__row objectlist-table__row--clickable"
        onClick={[Function]}
      >
        <td
          className="objectlist-table__td"
        >
          Sam
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            25
          </span>
          M
        </td>
      </tr>
      <tr
        className="objectlist-table__row objectlist-table__row--clickable"
        onClick={[Function]}
      >
        <td
          className="objectlist-table__td"
        >
          Mary
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            12
          </span>
          F
        </td>
      </tr>
      <tr
        className="objectlist-table__row objectlist-table__row--clickable"
        onClick={[Function]}
      >
        <td
          className="objectlist-table__td"
        >
          Q
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            3
          </span>
          ?
        </td>
      </tr>
      <tr
        className="objectlist-table__row objectlist-table__row--clickable"
        onClick={[Function]}
      >
        <td
          className="objectlist-table__td"
        >
          Peter
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            111
          </span>
          FM
        </td>
      </tr>
      <tr
        className="objectlist-table__row objectlist-table__row--clickable"
        onClick={[Function]}
      >
        <td
          className="objectlist-table__td"
        >
          Amy
        </td>
        <td
          className="objectlist-table__td"
        >
          <span>
            32
          </span>
          Confused
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
